# Powercore-V2.0

./: .gitignore  README.md
Firmware/: CC_Charger.c  CC_Charger.h  CLK.pio  CMakeLists.txt  main.c  pulse_generator.c  pulse_generator.h
Powercore-V2.0 CAD/: Back Panel v18.3mf  Front Panel v45.3mf
Powercore-V2.0 Firmware/: CC_Charger.c  CC_Charger.h  TIMING.pio  main.c  main.uf2  pulse_generator.c  pulse_generator.h
Powercore-V2.0 Motherboard/: Powercore-V2.0 Motherboard Bill of Materials.html
Powercore-V2.0 Motherboard/KiCAD/: .gitignore  CHARGER_CONTROLS.kicad_sch  CHARGER_POWER_STAGE.kicad_sch  CONNECTORS.kicad_sch  CONTROLS.kicad_sch  MICRO.kicad_sch  MONITORING.kicad_sch  OUTPUT_STAGE.kicad_sch  POWER.kicad_sch  POWERCORE-V2.0_MOTHERBOARD-bottom-pos.csv  POWERCORE-V2.0_MOTHERBOARD-top-pos.csv  POWERCORE-V2.0_MOTHERBOARD.csv  POWERCORE-V2.0_MOTHERBOARD.kicad_pro  POWERCORE-V2.0_MOTHERBOARD.kicad_sch  POWERCORE-V2.0_MOTHERBOARD.xml  Powercore-V2.0_Motherboard.kicad_prl  SLOPE_GENERATION.kicad_sch  fp-info-cache  fp-lib-table  ibom.config.ini  sym-lib-table  ~POWERCORE-V2.0_MOTHERBOARD.kicad_sch.lck
Powercore-V2.0 Motherboard/KiCAD/Gerbers/: POWERCORE-V2.0_MOTHERBOARD-B_Cu.gbl  POWERCORE-V2.0_MOTHERBOARD-B_Mask.gbs  POWERCORE-V2.0_MOTHERBOARD-B_Paste.gbp  POWERCORE-V2.0_MOTHERBOARD-B_Silkscreen.gbo  POWERCORE-V2.0_MOTHERBOARD-Edge_Cuts.gm1  POWERCORE-V2.0_MOTHERBOARD-F_Cu.gtl  POWERCORE-V2.0_MOTHERBOARD-F_Mask.gts  POWERCORE-V2.0_MOTHERBOARD-F_Paste.gtp  POWERCORE-V2.0_MOTHERBOARD-F_Silkscreen.gto  POWERCORE-V2.0_MOTHERBOARD-In1_Cu.g2  (+8 more)
(+135 files in other folders)
